# regimelab

./: .gitignore  DATA.md  LICENSE  README.md  README_VOLARB.md  README_VOLBOOK.md  _probe_fomc.py  audit_p0_robust.py  bo_best.py  bo_causal_riskweight.py  bo_cost_coverage_gate.py  bo_friction_aware_gate.py  bo_longleg_redesign.py  bo_vix1d_scaling.py  bo_vol_target_tune.py  bookopt_floor.py  bookopt_harness.py  bookopt_runlog.py  bookopt_stats.py  build_master_calendar.py  build_paper_pdf.py  build_results.py  build_ssrn_submission.py  data_quality.py  discover_pairs.py  fetch_cpi.py  fetch_fomc.py  fetch_mps.py  fetch_nq.py  fill_cpi.py  gauntlet.py  launch_widget.bat  ls_breakout_ls.py  ls_daily_trend_ls.py  ls_harness.py  ls_intraday_meanrev.py  ls_intraday_trend.py  ls_time_of_day.py  ls_vol_scaled_mom.py  market_calendar.py  (+50 more)
docs/: ROADMAP.md
examples/: 01_two_lenses.py  02_inversion_study.py  03_real_panel.py  04_horse_race.py  05_regime_timing.py  06_leading_timers.py  07_levered_trend.py  08_oos_validation.py  09_cost_capacity.py  10_leverage.py  11_catalysts.py  12_event_study.py  12_fomc_drift.py  13_fomc_overlay.py  14_nfp_drift.py  15_cpi_drift.py  16_nq_range_vol.py  17_parkinson_overlay.py  18_vrp_shortvol.py  19_combined_book.py  20_backtest_book.py  21_real_sim.py  22_sleeveB_leverage.py  23_verify_debug.py  24_audit_workflow.py  25_my_attribution.py  26_pressure_test.py  27_popular_strategies.py  28_crossasset.py  29_verify_ls.py  30_nq_stats.py  31_nq_yearly.py  32_nq_yearly_dist.py  33_my_volarb_check.py  34_reproduce_volarb.py  36_verify_rolled.py  (+23 more)
(+16 files in other folders)
